fix mobile spacing

--- a/public/style/global.scss
+++ b/public/style/global.scss
@@ -131,6 +131,9 @@ img.active {
     min-width:340px;
     height:830px;
   }
+  .modal-card {
+    margin-left:0;
+  }
 }
 
 // @media (prefers-color-scheme: dark) {
